@@ -14,6 +14,8 @@ To the reproducible documents collection:
 
 To SCons:
 
+* Added SLURM support for running MPI jobs through SCons
+
 To documentation:
 
 To APIs:
